[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "monorepo"
version = "0.0.0-dev"
requires-python = "^3.9"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
daytona = {path = "libs/sdk-python", develop = true}
daytona_api_client = {path = "libs/api-client-python", develop = true}
daytona_api_client_async = {path = "libs/api-client-python-async", develop = true}

[tool.poetry.group.dev.dependencies]
pydoc-markdown = ">=4.8.0,<5.0.0"
build = ">=1.0.3"
wheel = ">=0.41.2"
setuptools = ">=68.0.0"
twine = ">=4.0.2"
nbqa = ">=1.0.0,<2.0.0"
black = {extras = ["jupyter"], version = ">=23.1.0,<24.0.0"}
pylint = ">=3.0.0,<4.0.0"
isort = ">=5.10.0,<6.0.0"
matplotlib = ">=3.0.0,<4.0.0"
unasync = ">=0.6.0,<0.7.0"
docutils = "!=0.21.post1"
deptry = "^0.23.0"

[tool.basedpyright]
typeCheckingMode = "off"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0902",  # too-many-instance-attributes
    "W0702",  # no-exception-type-specified (bare-except)
    "W0719",  # broad-exception-raised
    "W0718",  # broad-exception-caught
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "R0801",  # duplicate-code
    "R0911",  # too-many-return-statements
    "R0915",  # too-many-statements
    "R0914",  # too-many-locals,
    "C0414",  # useless-import-alias
    "E1121",  # too-many-function-args
    "W1203",  # logging-fstring-interpolation
    "W1514",  # unspecified-encoding
    "W0640",  # cell-var-from-loop
    "R0912",  # too-many-branches
    "R1702",  # too-many-nested-blocks
    "R0916",  # too-many-boolean-expressions
    "C0302",  # too-many-lines
]
const-rgx = "(([A-Z_][A-Z0-9_]*)|([a-z_][a-z0-9_]*))"
allowed-redefined-builtins = ["id"]