[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.2", "build>=1.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "daytona"
version = "0.0.0-dev"
authors = [
    { name = "Daytona Platforms Inc.", email = "support@daytona.io"  },
]
description = "Python SDK for Daytona"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "environs>=9.5.0,<10.0.0",
    "marshmallow>=3.19.0,<4.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "Deprecated>=1.2.18,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
    "aiofiles>=24.1.0,<24.2.0",
    "aiohttp>=3.0.0,<4.0.0",
    "aiohttp_retry>=2.9.0,<3.0.0",
    "toml>=0.10.0,<0.11.0",
    "aioboto3>=13.0.0,<15.0.0",
    "boto3>=1.0.0,<2.0.0",
    "importlib-metadata>=1.0.0,<6.0.0; python_version<'3.8'"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["daytona", "sdk"]
license = {text = "AGPL-3.0"}
