[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "daytona"
version = "0.0.0-dev"
authors = [
    { name = "Daytona Platforms Inc.", email = "support@daytona.io"  },
]
description = "Python SDK for Daytona"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "environs>=10.0.0,<15.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "Deprecated>=1.2.18,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
    "aiofiles>=24.1.0,<24.2.0",
    "toml>=0.10.0,<0.11.0",
    "obstore>=0.7.0,<0.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["daytona", "sdk"]
license = {text = "Apache-2.0"}

[tool.deptry]
exclude = ["src/daytona/_utils/chart_data_extractor_wrapper.py", "scripts/sync_generator.py"]
extend_exclude = [".venv", "dist", "build", ".pytest_cache", "__pycache__"]
