[project]
name = "deeper-rlm"
version = "0.1.0"
description = "Recursive Language Model agent system with unlimited depth recursion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.50.0",
    "daytona>=0.128.1",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
deeper-rlm = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm", "output_logging"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
