[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-data-analysis-openai"
version = "0.1.0"
description = "Daytona + OpenAI data analyst example in Python"
authors = [
    {name = "Daytona Team", email = "support@daytona.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.3.0,<2.0.0",
    "daytona>=0.1.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]