[project]
name = "daytona-claude-managed-agents"
version = "0.1.0"
description = "Reference implementation for running Claude Managed Agents on Daytona."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103",
    "daytona",
    "python-dotenv",
]

[project.optional-dependencies]
webhook = [
    "anthropic[webhooks]>=0.103",
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "build_default_snapshot",
    "create_agent",
    "host_lib",
    "host_orchestrator_polling",
    "host_orchestrator_webhook",
    "orchestrator_lib",
    "sandbox_runner",
]
