[project]
name = "daytona-vllm-serving"
version = "0.1.0"
description = "Serve an OpenAI-compatible vLLM endpoint on a Daytona GPU sandbox"
authors = [
    {name = "Lovre Pesut", email = "lpesut@daytona.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "daytona>=0.185.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "openai>=1.60.0",
    "litellm>=1.70.0",
]

[tool.setuptools]
py-modules = []
