[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tealtiger-governed-sandbox"
version = "0.1.0"
description = "Pre-execution governance for Daytona sandbox code with TealTiger"
authors = [
    {name = "Daytona Team", email = "support@daytona.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "daytona>=0.1.0,<1.0.0",
    "openai>=1.3.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tealtiger>=1.3.0,<2.0.0"
]
